fix overflow scroll on view wrapper

--- a/css/global.css
+++ b/css/global.css
@@ -20,6 +20,7 @@ body,
   font-family: var(--font-family);
   font-size: 16px;
   height: 100%;
+  overflow: hidden;
 }
 
 /* utils */
